--- a/setup.cfg
+++ b/setup.cfg
@@ -76,3 +76,16 @@ autodoc_tree_index_modules = True
 # VCS export must be deactivated since we are using setuptools-scm
 no-vcs = 1
 formats = bdist_wheel
+
+# See the docstring in versioneer.py for instructions. Note that you must
+# re-run 'versioneer.py setup' after changing this section, and commit the
+# resulting files.
+
+[versioneer]
+VCS = git
+style = pep440
+versionfile_source = tidalytics/_version.py
+versionfile_build = build/lib/tidalytics/_version.py
+tag_prefix =
+parentdir_prefix = tidalytics-
+
